test/extended/testdata/sriovnetwork/crd-mlx4lx.yaml
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  name: sriov-net-connectx4-lx
  annotations:
    k8s.v1.cni.cncf.io/resourceName: openshift.com/mlx4lx
spec:
  config: '{
  "type": "sriov",
  "name": "sriov-network",
  "ipam": {
    "type": "host-local",
    "subnet": "10.56.217.0/24",
    "routes": [{
      "dst": "0.0.0.0/0"
    }],
    "gateway": "10.56.217.1"
  }
}'
