test/extended/testdata/sriovnetwork/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sriov-debug-pod
spec:
  nodeSelector:
    node.sriovStatus: provisioning
  containers:
  - command:
    - /bin/sh
    image: zenghui/ocp-sriov-debug:latest
    imagePullPolicy: Always
    name: container-00
    securityContext:
      privileged: true
      procMount: Default
      runAsUser: 0
    stdin: true
    stdinOnce: true
    tty: true
    volumeMounts:
    - mountPath: /host
      name: host
  hostNetwork: true
  hostPID: true
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  volumes:
  - hostPath:
      path: /
      type: Directory
    name: host
