test/extended/testdata/sriovnetwork/pod-mlx5.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod-mlx5
  annotations:
    k8s.v1.cni.cncf.io/networks: sriov-net-mlx-connectx5-suffix
spec:
  containers:
  - name: appcntr
    image: centos/tools 
    imagePullPolicy: IfNotPresent
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 300000; done;" ]
    resources:
      requests:
        openshift.com/mlx5: '1' 
      limits:
        openshift.com/mlx5: '1'
