test/extended/testdata/sriovnetwork/sriov-admission-controller-configmap.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: openshift-service-ca
  namespace: kube-system
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
