test/extended/testdata/sriovnetwork/sriov-admission-controller-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: network-resources-injector-service
  namespace: kube-system
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: network-resources-injector-secret
spec:
  ports:
  - port: 443
    targetPort: 6443
  selector:
    app: network-resources-injector
