test/extended/testdata/sriovnetwork/sriov-admission-controller-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: network-resources-injector-config
  namespace: kube-system
webhooks:
  - name: network-resources-injector-config.k8s.io
    clientConfig:
      service:
        name: network-resources-injector-service
        namespace: kube-system
        path: "/mutate"
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["pods"]
